new merchants and community volunteer added

--- a/index.html
+++ b/index.html
@@ -679,13 +679,13 @@
 										</div>
 									</li>
 									<li><div class="team partners">
-										<a href="https://eve-buy.com/" target="_blank">
+										<a href="https://www.theseafoodclub.com" target="_blank">
 					                      <div class="team-image">
-					                        <img src="images/merchants/EveBuy.png" alt="Eve-Buy">
+					                        <img src="images/merchants/the-sea-food-club.png" alt="Seafood Club">
 					                      </div>
 					                      <div class="team-desc">
 					                        <div class="partners-title">
-					                          <span>Eve-Buy</span>
+					                          <span>Seafood Club</span>
 					                        </div>
 					                      </div>
 					                    </a>
