Merchant MyBitcart added

--- a/index.html
+++ b/index.html
@@ -640,39 +640,39 @@
 								</div>
 								<ul class="clients-grid grid-4 nobottommargin clearfix partners-width">
 									<li><div class="team partners">
-										<a href="http://www.ubbbk.com/" target="_blank">
+										<a href="https://twitter.com/_jayconnect_" target="_blank">
 					                      <div class="team-image">
-					                        <img src="images/merchants/ubbbk.png" alt="UBBBK">
+					                        <img src="images/merchants/jayconnect.jpg" alt="Jay connect">
 					                      </div>
 					                      <div class="team-desc">
 					                        <div class="partners-title">
-					                          <span>UBBBK</span>
+					                          <span>Jay Connect</span>
 					                        </div>
 					                      </div>
 					                    </a>
 										</div>
 									</li>
 									<li><div class="team partners">
-										<a href="http://ernestorassi.com/" target="_blank">
+										<a href="https://shop.houseoffelsteve.com/" target="_blank">
 					                      <div class="team-image">
-					                        <img src="images/merchants/Ernesto-Rassi.jpg" alt="Ernesto Rassi">
+					                        <img src="images/merchants/house-of-felsteve.jpg" alt="House of Felsteve">
 					                      </div>
 					                      <div class="team-desc">
 					                        <div class="partners-title">
-					                          <span>Ernesto Rassi</span>
+					                          <span>House of Felsteve</span>
 					                        </div>
 					                      </div>
 					                    </a>
 										</div>
 									</li>
 									<li><div class="team partners">
-										<a href="http://bitstickers.net" target="_blank">
+										<a href="https://mybitcart.com/" target="_blank">
 					                      <div class="team-image">
-					                          <img src="images/merchants/bit-stickers.png" alt="BitStickers - Spread the word">
+					                          <img src="images/merchants/mybitcart.png" alt="My Bitcart">
 					                      </div>
 					                      <div class="team-desc">
 					                        <div class="partners-title">
-					                          <span>BitStickers</span>
+					                          <span>My Bitcart</span>
 					                        </div>
 					                      </div>
 					                    </a>
