--- a/flash-merchants.html
+++ b/flash-merchants.html
@@ -805,6 +805,20 @@
                     </a>
                   </div>
                 </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="https://mybitcart.com/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/mybitcart.png" alt="My Bitcart">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>My Bitcart</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
