--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 										</h3>
 									</div>
 									<div class="col-sm-12">
-										<span>Read out Whitepaper 
+										<span>Read our Whitepaper 
 											<a href="docs/FLASHWhitepaper.pdf" target="_blank">Here</a>
 										</span>
 									</div>
