--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-
+welcome to flash-coin/official website
 <div class="clearfix">
 
 	<div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
