--- a/flash-merchants.html
+++ b/flash-merchants.html
@@ -777,6 +777,104 @@
                     </a>
                   </div>
                 </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="https://www.facebook.com/eyesonyoulashes/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/eyes-on-you.jpeg" alt="Eyes on you">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>Eyes on You</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="http://klar-av.com/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/klar.jpeg" alt="Klar">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>Klar</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="https://www.galactic.ca/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/galactic.png" alt="Galactic">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>Galactic</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="http://www.echoglass.com/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/echo-glazing.png" alt="Echo Glazing">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>Echo Glazing</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="https://dalesauto.ca/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/dales.jpeg" alt="dales">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>Dale's</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="https://us.wplbike.com/collections/lubricate" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/chain-lubricant.png" alt="Chain Lubricant">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>Chain Lubricant</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="https://www.boqueria.ca/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/la-buqveria.png" alt="la-buqveria">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>La Boqveria</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
