--- a/our-team.html
+++ b/our-team.html
@@ -84,33 +84,7 @@
 
 							<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
 
-								<div class="col-md-4 bottommargin team-advisors">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/chris-kitze.jpg" alt="Chris Kitze">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Chris Kitze</h4><span>Advisor | <a href="https://www.linkedin.com/in/chriskitze/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
-										</div>
-									</div>
-								</div>
-								<!--chris kitze end-->
-
-								<div class="col-md-4 bottommargin team-advisors">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/vinh-vo.jpg" alt="Vinh Vo">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Vinh Vo</h4><span>Advisor | <a href="https://www.linkedin.com/in/flashiovinh/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
-										</div>
-									</div>
-								</div>
-								<!-- vinh vo end -->
-
-								<div class="col-md-4 bottommargin team-advisors">
+								<div class="col-md-6 bottommargin team-advisors">
 									<div class="team">
 										<div class="team-image">
 											<img src="images/team/james-jr.jpg?12" alt="James Jr.">
@@ -123,20 +97,7 @@
 								</div>
 								<!--James Jr. end-->
 
-								<div class="col-md-4 bottommargin team-advisors">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/jim-blasko.jpg" alt="Jim Blasko">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Jim Blasko</h4><span>Advisor</span></div>
-										</div>
-									</div>
-								</div>
-								<!--Jim Blasko end-->
-
-								<div class="col-md-4 bottommargin team-advisors">
+								<div class="col-md-6 bottommargin team-advisors">
 									<div class="team">
 										<div class="team-image">
 											<img src="images/team/no-photo.png?1" alt="Codeislaw">
@@ -164,164 +125,9 @@
 						<div class="container clearfix">
 
 							<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
-
-								<!--
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/jason-king.png" alt="Jason King">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Jason King</h4><span>Co-Creator | <a href="https://www.linkedin.com/in/jason-king-03b15149/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
-										</div>
-									</div>
+								<div class="col-md-12 col-sm-12 bottommargin">
+									<p>FLASH devs prefer to be anonymous for privacy and security reason. Please get in touch with the team via <a href="mailto:support@flashcoin.io">support@flashcoin.io</a> for any queries.</p>
 								</div>
-								-->
-								<!--jason king end-->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="Capt. Nomad">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Capt. Nomad</h4><span>Technology Head</span></div>
-										</div>
-									</div>
-								</div>
-								<!-- Capt. Nomad end -->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="DB">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>DB</h4><span>Project Manager</span></div>
-										</div>
-									</div>
-								</div>
-								<!-- Mr DB end -->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="ImMike">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>ImMike</h4><span>Full Stack Developer,<br> Mobile Dev Lead</span></div>
-										</div>
-									</div>
-								</div>
-								<!--ImMike end-->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="Godlike">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Godlike</h4><span>Full Stack Developer</span></div>
-										</div>
-									</div>
-								</div>
-								<!--Godlike end-->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="AK">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>AK</h4><span>Blockchain R&D</span></div>
-										</div>
-									</div>
-								</div>
-								<!-- AK end -->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="Chintoo">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Chintoo</h4><span>Mobile Developer</span></div>
-										</div>
-									</div>
-								</div>
-								<!--Chintoo end-->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="Master Div">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Master Div</h4><span>Mobile Developer</span></div>
-										</div>
-									</div>
-								</div>
-								<!--Master Div end-->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="Dani">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Dani</h4><span>Cyber Security Auditor</a></span></div>
-										</div>
-									</div>
-								</div>
-								<!--Dani end-->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="D.Thomas">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>D.Thomas</h4><span>Blockchain R&D</span></div>
-										</div>
-									</div>
-								</div>
-								<!-- D. Thomas end -->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="Larry B">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Larry B</h4><span>Blockchain Developer</span></div>
-										</div>
-									</div>
-								</div>
-								<!-- Larry -->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="Max">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Max</h4><span>Full Stack Developer</span></div>
-										</div>
-									</div>
-								</div>
-								<!-- Max end -->
 
 							</div>
 						</div>
